# backward_euler

./: .gitignore  CMakeLists.txt  main.cpp  makefile  project.org  simulator.py  spring_list.cpp  spring_list.h  system.cpp  system.h  vec3.cpp
differenciable/: differenciable.py  main.py  meansquareloss.py  recorder.py  save_simulation.py
differentiable/: Diff.ipynb  animation_plots.py  backpropagation.py  compare_simulations.py  differentiable.py  finite_diff.py  interpolate_parameters.py  interpolate_values.py  main.py  main2.py  main2_tilt.py  main3.py  mainN.py  mainN2.py  mainN3.py  mainN4.py  main_finite.py  main_parallel.py  meansquareloss.py  plot.py  plot_saved.py  recorder.py  save_simulation.py  simple_case.py  simulation_functions.py  solve_system.py  test.py
differentiable/data/: g_data.npy  x_data.npy  y_data.npy
include/: clock.h  clock.hpp  collision_ball.hpp  collision_plane.hpp  constraint.hpp  contact.h  contact.hpp  differentiable_manager.hpp  edge.h  fixer.hpp  gravity.hpp  integrator.hpp  interaction.h  interaction.hpp  length_constraint.hpp  load_mesh.h  mass_spring.hpp  mass_spring_gui.hpp  mesh.h  non_physical.hpp  parameter.hpp  parameter_list.hpp  particle_system.hpp  pysimulation.hpp  python_interaction.hpp  python_interaction.template  rigid_body.hpp  simulable.hpp  spring.h  spring.hpp  spring_counter.hpp  spring_list.h  spring_test.hpp  system.h  twobody.hpp  vec3.h
include/glad/: glad.h
shaders/: test.v0.frag  test.v0.vert
src/: clock.cpp  collision_ball.cpp  collision_plane.cpp  contact.cpp  differentiable_manager.cpp  glad.c  gravity.cpp  integrator.cpp  length_constraint.cpp  main.cpp  mass_spring.cpp  mass_spring_gui.cpp  mesh.cpp  non_physical.cpp  parameter_list.cpp  particle_system.cpp  pybinding.cpp  pybinding_class.cpp  pysimulation.cpp  rigid_body.cpp  simulable.cpp  spring.cpp  spring_counter.cpp  spring_list.cpp  system.cpp  twobody.cpp  vec3.cpp
test/: Makefile  main.cpp
